# HTM162-Bazel-Cmake

./: .gitignore  CMakeLists.txt  README.rst  bazel-TAppEncoder.sh  bazel-TLibCommon.sh  bazel-TLibResnet.sh
App/TAppClassifier/: BUILD  DoNotUseMemain.cpp  main.cpp
App/TAppEncoder/: AnnexBwrite.h  AphaTensorflowGlobalVars.h  AphaTfPha.cpp  AphaTfPha.h  BUILD  CommonDef.h  Debug.cpp  NAL.h  NALwrite.cpp  NALwrite.h  SEI.cpp  SEIEncoder.h  SEIwrite.cpp  SEIwrite.h  SyntaxElementWriter.cpp  SyntaxElementWriter.h  TAppComCamPara.cpp  TAppComCamPara.h  TAppEncCfg.cpp  TAppEncCfg.h  TAppEncTop.cpp  TAppEncTop.h  TComBitCounter.h  TComBitStream.h  TComDataCU.cpp  TComDataCU.h  TComInterpolationFilter.cpp  TComInterpolationFilter.h  TComLoopFilter.cpp  TComMotionInfo.h  TComPattern.h  TComPicSym.cpp  TComPicYuv.cpp  TComPicYuvMD5.cpp  TComRom.cpp  TComRom.h  TComSampleAdaptiveOffset.cpp  TComSlice.cpp  TComSlice.h  TComWedgelet.cpp  (+46 more)
Lib/TLibCommon/: AccessUnit.h  AnnexBwrite.h  BUILD  ContextModel.cpp  ContextModel.h  ContextModel3DBuffer.cpp  ContextModel3DBuffer.h  ContextTables.h  Debug.cpp  Debug.h  MD5.h  NAL.h  NALwrite.cpp  NALwrite.h  SEI.cpp  SEI.h  SEIEncoder.cpp  SEIEncoder.h  SEIwrite.cpp  SEIwrite.h  SyntaxElementWriter.cpp  SyntaxElementWriter.h  TAppComCamPara.cpp  TAppComCamPara.h  TAppEncCfg.h  TAppEncTop.cpp  TComBitCounter.h  TComBitStream.cpp  TComBitStream.h  TComCABACTables.cpp  TComCABACTables.h  TComChromaFormat.cpp  TComChromaFormat.h  TComCodingStatistics.h  TComDataCU.cpp  TComDataCU.h  TComInterpolationFilter.cpp  TComInterpolationFilter.h  TComList.h  TComLoopFilter.cpp  (+98 more)
Lib/TLibResnet/: BUILD  TResnet.h
