cmake_minimum_required(VERSION 3.8)
project(HTM162_TAppEncoder)

set(CMAKE_CXX_STANDARD 11)

# config for single individual classifier: start
set(SOURCE_FILES App/TAppClassifier/main.cpp App/TAppClassifier/strtk.hpp)
add_executable(TAppClassifer ${SOURCE_FILES})
find_package(TensorflowCC COMPONENTS Shared)
target_link_libraries(TAppClassifer TensorflowCC::Shared)
# config for single individual classifier: end

set(SOURCE_FILES
  App/TAppEncoder/encmain.cpp
  App/TAppEncoder/TAppEncCfg.cpp
  App/TAppEncoder/TAppEncCfg.h
  App/TAppEncoder/TAppEncTop.cpp
  App/TAppEncoder/TAppEncTop.h
  Lib/TLibCommon/AccessUnit.h
  Lib/TLibCommon/AnnexBwrite.h
  Lib/TLibCommon/CommonDef.h
  Lib/TLibCommon/ContextModel.cpp
  Lib/TLibCommon/ContextModel.h
  Lib/TLibCommon/ContextModel3DBuffer.cpp
  Lib/TLibCommon/ContextModel3DBuffer.h
  Lib/TLibCommon/ContextTables.h
  Lib/TLibCommon/csvfile.h
  Lib/TLibCommon/Debug.cpp
  Lib/TLibCommon/Debug.h
  Lib/TLibCommon/libmd5.c
  Lib/TLibCommon/libmd5.h
  Lib/TLibCommon/MD5.h
  Lib/TLibCommon/NAL.h
  Lib/TLibCommon/NALwrite.cpp
  Lib/TLibCommon/NALwrite.h
  Lib/TLibCommon/program_options_lite.cpp
  Lib/TLibCommon/program_options_lite.h
  Lib/TLibCommon/SEI.cpp
  Lib/TLibCommon/SEI.h
  Lib/TLibCommon/SEIEncoder.cpp
  Lib/TLibCommon/SEIEncoder.h
  Lib/TLibCommon/SEIwrite.cpp
  Lib/TLibCommon/SEIwrite.h
  Lib/TLibCommon/SyntaxElementWriter.cpp
  Lib/TLibCommon/SyntaxElementWriter.h
  Lib/TLibCommon/TAppComCamPara.cpp
  Lib/TLibCommon/TAppComCamPara.h
  Lib/TLibCommon/TComBitCounter.h
  Lib/TLibCommon/TComBitStream.cpp
  Lib/TLibCommon/TComBitStream.h
  Lib/TLibCommon/TComCABACTables.cpp
  Lib/TLibCommon/TComCABACTables.h
  Lib/TLibCommon/TComChromaFormat.cpp
  Lib/TLibCommon/TComChromaFormat.h
  Lib/TLibCommon/TComCodingStatistics.h
  Lib/TLibCommon/TComDataCU.cpp
  Lib/TLibCommon/TComDataCU.h
  Lib/TLibCommon/TComInterpolationFilter.cpp
  Lib/TLibCommon/TComInterpolationFilter.h
  Lib/TLibCommon/TComList.h
  Lib/TLibCommon/TComLoopFilter.cpp
  Lib/TLibCommon/TComLoopFilter.h
  Lib/TLibCommon/TComMotionInfo.cpp
  Lib/TLibCommon/TComMotionInfo.h
  Lib/TLibCommon/TComMv.h
  Lib/TLibCommon/TComPattern.cpp
  Lib/TLibCommon/TComPattern.h
  Lib/TLibCommon/TComPic.cpp
  Lib/TLibCommon/TComPic.h
  Lib/TLibCommon/TComPicSym.cpp
  Lib/TLibCommon/TComPicSym.h
  Lib/TLibCommon/TComPicYuv.cpp
  Lib/TLibCommon/TComPicYuv.h
  Lib/TLibCommon/TComPicYuvMD5.cpp
  Lib/TLibCommon/TComPrediction.cpp
  Lib/TLibCommon/TComPrediction.h
  Lib/TLibCommon/TComRdCost.cpp
  Lib/TLibCommon/TComRdCost.h
  Lib/TLibCommon/TComRdCostWeightPrediction.cpp
  Lib/TLibCommon/TComRdCostWeightPrediction.h
  Lib/TLibCommon/TComRectangle.h
  Lib/TLibCommon/TComRom.cpp
  Lib/TLibCommon/TComRom.h
  Lib/TLibCommon/TComSampleAdaptiveOffset.cpp
  Lib/TLibCommon/TComSampleAdaptiveOffset.h
  Lib/TLibCommon/TComSlice.cpp
  Lib/TLibCommon/TComSlice.h
  Lib/TLibCommon/TComTrQuant.cpp
  Lib/TLibCommon/TComTrQuant.h
  Lib/TLibCommon/TComTU.cpp
  Lib/TLibCommon/TComTU.h
  Lib/TLibCommon/TComWedgelet.cpp
  Lib/TLibCommon/TComWedgelet.h
  Lib/TLibCommon/TComWeightPrediction.cpp
  Lib/TLibCommon/TComWeightPrediction.h
  Lib/TLibCommon/TComYuv.cpp
  Lib/TLibCommon/TComYuv.h
  Lib/TLibCommon/TDecBinCoder.h
  Lib/TLibCommon/TDecEntropy.cpp
  Lib/TLibCommon/TDecEntropy.h
  Lib/TLibCommon/TDecSbac.cpp
  Lib/TLibCommon/TDecSbac.h
  Lib/TLibCommon/TEncAnalyze.h
  Lib/TLibCommon/TEncBinCoder.h
  Lib/TLibCommon/TEncBinCoderCABAC.cpp
  Lib/TLibCommon/TEncBinCoderCABAC.h
  Lib/TLibCommon/TEncBinCoderCABACCounter.cpp
  Lib/TLibCommon/TEncBinCoderCABACCounter.h
  Lib/TLibCommon/TEncCavlc.cpp
  Lib/TLibCommon/TEncCavlc.h
  Lib/TLibCommon/TEncCfg.h
  Lib/TLibCommon/TEncCu.cpp
  Lib/TLibCommon/TEncCu.h
  Lib/TLibCommon/TEncEntropy.cpp
  Lib/TLibCommon/TEncEntropy.h
  Lib/TLibCommon/TEncGOP.cpp
  Lib/TLibCommon/TEncGOP.h
  Lib/TLibCommon/TEncPic.cpp
  Lib/TLibCommon/TEncPic.h
  Lib/TLibCommon/TEncPreanalyzer.cpp
  Lib/TLibCommon/TEncPreanalyzer.h
  Lib/TLibCommon/TEncRateCtrl.cpp
  Lib/TLibCommon/TEncRateCtrl.h
  Lib/TLibCommon/TEncSampleAdaptiveOffset.cpp
  Lib/TLibCommon/TEncSampleAdaptiveOffset.h
  Lib/TLibCommon/TEncSbac.cpp
  Lib/TLibCommon/TEncSbac.h
  Lib/TLibCommon/TEncSearch.cpp
  Lib/TLibCommon/TEncSearch.h
  Lib/TLibCommon/TEncSlice.cpp
  Lib/TLibCommon/TEncSlice.h
  Lib/TLibCommon/TEncTop.cpp
  Lib/TLibCommon/TEncTop.h
  Lib/TLibCommon/TRenFilter.cpp
  Lib/TLibCommon/TRenFilter.h
  Lib/TLibCommon/TRenImage.cpp
  Lib/TLibCommon/TRenImage.h
  Lib/TLibCommon/TRenImagePlane.cpp
  Lib/TLibCommon/TRenImagePlane.h
  Lib/TLibCommon/TRenInterpFilter.cpp
  Lib/TLibCommon/TRenInterpFilter.h
  Lib/TLibCommon/TRenModel.cpp
  Lib/TLibCommon/TRenModel.h
  Lib/TLibCommon/TRenModSetupStrParser.cpp
  Lib/TLibCommon/TRenModSetupStrParser.h
  Lib/TLibCommon/TRenSingleModel.cpp
  Lib/TLibCommon/TRenSingleModel.h
  Lib/TLibCommon/TRenTop.cpp
  Lib/TLibCommon/TRenTop.h
  Lib/TLibCommon/TVideoIOYuv.cpp
  Lib/TLibCommon/TVideoIOYuv.h
  Lib/TLibCommon/TypeDef.h
  Lib/TLibCommon/WeightPredAnalysis.cpp
  Lib/TLibCommon/WeightPredAnalysis.h)

include_directories(.)
include_directories(App)
include_directories(App/TAppEncoder)
include_directories(Lib)
include_directories(Lib/TLibCommon)

add_executable(TAppEncoder ${SOURCE_FILES})